format updates, adding files for lightbox2

--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -218,7 +218,7 @@ div.clearer {
 
 #right-column {
         float: left;
-        width: 200px;
+        width: 220px;
         margin: 50px auto; /*sets top of right column content - set to be below page headline */
         font-family: Verdana, Helvetica, sans-serif;
         font-size: 12px;
@@ -229,7 +229,7 @@ div.clearer {
 
 .right-column-box {
         float: left;
-        width: 200px;
+        width: 210px;
         margin: 20px 10px 30px 10px;
         background: #fff;
         border: 1px solid #999999;
@@ -827,6 +827,10 @@ input, textarea {
 
 .answer_fields {
   margin: 0 0 0 3em;
+  }
+
+.thumb {
+  border: 1px solid #ccc;
   }
 
 /*-----------------------------------------------------
