--- a/app/views/products/px.html.erb
+++ b/app/views/products/px.html.erb
@@ -24,6 +24,9 @@
   <tr class=""> 
     <td> <% if product.photo_path? %>
            <%= image_tag 'sm_' + product.photo_path %>
+
+<%= link_to image_tag(product.photo_path, :size => "25x25", :class => 'thumb'),'assets/' + product.photo_path, :data => {:lightbox, 'image-' + product.id.to_s} %>
+
          <% end %>
     </td>
     <td><strong><%= product.name %></strong><br /><%= product.description %></td>
