update to call script

--- a/app/views/products/px.html.erb
+++ b/app/views/products/px.html.erb
@@ -79,4 +79,5 @@
 <% end %>
 </table>
 
-<script src="/assets/lightbox.js" type="text/javascript"></script>
+
+<%= javascript_include_tag "lightbox" %>
