--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,7 @@
   <tr>
     <th>Username</th>
     <th>Roles</th>
+    <th>Active</th>
     <th>Last Login</th>
   </tr>
 
@@ -15,6 +16,7 @@
         <%= role.name %> 
       <% end %>
     </td>
+    <td style="text-align: center;"><% if user.member.active == true %> √ <% else %> X <% end %>
     <td><% if !user.last_sign_in_at.nil? %><%= user.last_sign_in_at.strftime("%b %d, %Y %H:%M") + " [" + user.sign_in_count.to_s + "]" %><% end %></td>
   </tr>
 <% end %>
