updates to adding member to trip via admin screens

--- a/app/views/event_signups/_form.html.erb
+++ b/app/views/event_signups/_form.html.erb
@@ -38,8 +38,11 @@
   </div>
 </div>
 
+<%= f.hidden_field :position, :value => 0 %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
 
 <% end %>
+
