--- a/app/assets/stylesheets/print/hh_print.css
+++ b/app/assets/stylesheets/print/hh_print.css
@@ -69,7 +69,7 @@ table {
 .hh-rev {
   font-size: 0.5rem;
   text-align: right;
-  margin: 0 0 3em 0;
+  margin: 0 0 2em 0;
 }
 
 .hh-form {
@@ -81,6 +81,15 @@ table {
 .underline {
   text-decoration: underline
   }
+
+table {
+  font-family: sans-serif;
+  font-size: 0.75em;
+}
+
+table td {
+  padding: 0.25em;
+}
 
 .table_border { 
     margin: 10px;
