--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -91,7 +91,7 @@
     <%= f.text_field :caf_col_no, :size => '15' %>
   </div>
   <div class="cell field">
-    <%= f.label :dd_dues_date, "Dues Date" %><br />
+    <%= f.label :dd_dues_date, "Last Dues Paid Date" %><br />
     <%= f.text_field :dd_dues_date, :size => '15' %>
   </div>
   <div class="cell field">
