--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -31,7 +31,7 @@
   <em>CAF Col No:</em>
   <%= @member.caf_col_no %>
 <br />
-  <em>DDS dues date:</em>
+  <em>DDS last dues paid date:</em>
   <%= @member.dd_dues_date %>
 </p>
 </div>
