updates to caf_join_date data field

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -98,8 +98,8 @@
     <%= f.text_field :caf_col_no, :size => '8' %>
   </div>
   <div class="cell field">
-    <%= f.label :join_date, "CAF Join Date" %><br />
-    <%= f.text_field :join_date, :size => '10' %>
+    <%= f.label :caf_join_date, "CAF Join Date" %><br />
+    <%= f.text_field :caf_join_date, :size => '10' %>
   </div>
   <div class="cell field">
     <%= f.label :dd_dues_date, "Sqdn Dues Last Paid" %><br />
