--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,18 +14,14 @@
 
 
     <li><%= link_to 'Home', "/" %></li>
-    <li><%= link_to "Calendar", calendar_path %>
-        <ul>
-        <li><%= link_to "News Items", news_index_path %></li>
-        </ul>
-    </li>
-    <li><%= link_to "History", pages_PBJs_path %></a>
+    <li><%= link_to "Calendar", calendar_path %></li>
+    <li><%= link_to "History", pages_PBJs_path %>
         <ul>
         <li><%= link_to "PBJs", pages_PBJs_path %></li>
         <li><%= link_to "VMB 612", pages_VMB612_path %></li>
         </ul>
     </li>
-    <li><%= link_to "Support", px_path %></a>
+    <li><%= link_to "Support", px_path %>
         <ul>
         <li><%= link_to "PX", px_path %></li>
         <li><%= link_to "Rides", living_flight_history_experience_path %></li>
