updated other references to join date

--- a/app/views/versions/diff.html.erb
+++ b/app/views/versions/diff.html.erb
@@ -62,7 +62,7 @@
       </p>
       <p>
         <strong>Join Date:</strong>
-        <%= diff(@version.reify.join_date, @member.join_date) %>
+        <%= diff(@version.reify.caf_join_date, @member.caf_join_date) %>
       </p>
       <p>
         <strong>Level:</strong>
