--- a/app/views/members/_account_form.html.erb
+++ b/app/views/members/_account_form.html.erb
@@ -99,7 +99,7 @@
     <%= @member.active %>
   </div>
 </div>
-<p class="form_tip">Dues date may not be accurate - currently updating. Feb 18, 2014.</p>  
+<p class="form_tip">Dues date may not be accurate - currently updating.</p>  
 <div class="clearer"></div>
 
 </div>
