--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,11 +42,12 @@
         <li><%= link_to "Members", pages_member_home_path %>
         <% if user_signed_in? %>
           <ul>
-            <li><%= link_to 'Bulletin Board', posts_path %></li>
             <li><%= link_to 'Documents', squadron_documents_path %></li>
             <li><%= link_to 'Members List', members_list_path %></li>
+            <li><%= link_to 'Officers/Terms', terms_path %></li>
             <li><%= link_to "Account/Profile", account_path(User.find(current_user).member.id) %></li>
             <li><%= link_to 'Password', edit_user_registration_path %></li>
+            <li><%= link_to 'Bulletin Board', posts_path %></li>
             <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
           <% if current_user.roles.any? {|role| role.name == "admin"  or role.name == "superuser" } %>
             <li><%= link_to "Admin", pages_admin_home_path %></li>
