--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -7,7 +7,7 @@
         <th style="width: 115px;">Source</th>
     </tr>
     <% @current_news.each do |news| %>
-    <tr class="<%= cycle('white_row', 'grey_row') %>"> 
+   <tr class="<%= cycle('plain_row', 'colored_row') %>">
         <td class="top-align" ><%= news.date.strftime("%b %d, %Y") %></td>
         <td class="top-align headline" ><%= link_to news.title, if !news.content.empty? then news else news.ext_url end %></td>
         <td class="top-align" ><%= news.source %></td>
@@ -26,7 +26,7 @@
         <th style="width: 115px;">Source</th>
     </tr>
     <% @archive_news.each do |news| %>
-   <tr class="<%= cycle('white_row', 'grey_row') %>">
+   <tr class="<%= cycle('plain_row', 'colored_row') %>">
         <td class="top-align" ><%= news.date.strftime("%b %d, %Y") %></td>
         <td class="top-align headline" ><%= link_to news.title, if !news.content.empty? then news else news.ext_url end %></td>
         <td class="top-align" ><%= news.source %></td>
