--- a/app/views/officer_positions/_form.html.erb
+++ b/app/views/officer_positions/_form.html.erb
@@ -19,6 +19,14 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+    <%= f.label :usual_term_length %><br />
+    <%= f.text_field :usual_term_length %>
+  </div>
+  <div class="field">
+    <%= f.label :usual_term_start %><br />
+    <%= f.text_field :usual_term_start %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
